Revert use of Eclipse Collections.