@@ -3,15 +3,15 @@ package edu.berkeley.boinc.client;
 import android.util.Log;
 
 import org.apache.commons.lang3.StringUtils;
-import org.eclipse.collections.api.block.predicate.Predicate;
-import org.eclipse.collections.api.list.ImmutableList;
-import org.eclipse.collections.api.list.MutableList;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 
 import edu.berkeley.boinc.rpc.AccountIn;
@@ -27,7 +27,6 @@ import edu.berkeley.boinc.rpc.ProjectInfo;
 import edu.berkeley.boinc.rpc.RpcClient;
 import edu.berkeley.boinc.rpc.Transfer;
 import edu.berkeley.boinc.utils.BOINCErrors;
-import edu.berkeley.boinc.utils.ECLists;
 import edu.berkeley.boinc.utils.Logging;
 
 /**
@@ -36,9 +35,8 @@ import edu.berkeley.boinc.utils.Logging;
  * Most functions can block executing thread, do not call them from UI thread!
  */
 public class ClientInterfaceImplementation extends RpcClient {
-
     // interval between polling retries in ms
-    private final Integer minRetryInterval = 1000;
+    private final int minRetryInterval = 1000;
 
     /**
      * Reads authentication key from specified file path and authenticates GUI for advanced RPCs with the client
@@ -497,22 +495,25 @@ public class ClientInterfaceImplementation extends RpcClient {
         // less than desired number of messsages available, adapt lower bound
         if (lowerBound < 0)
             lowerBound = 0;
-
-        // returns every message with seqNo > lowerBound
-        MutableList<Message> messages = ECLists.mutable.ofAll(getMessages(lowerBound));
+        List<Message> msgs = getMessages(lowerBound); // returns ever messages with seqNo > lowerBound
 
         if (seqNo > 0) {
             // remove messages that are >= seqNo
-            messages.removeIf(message -> message.getSeqno() >= seqNo);
+            Iterator<Message> it = msgs.iterator();
+            while (it.hasNext()) {
+                Message tmp = it.next();
+                if (tmp.getSeqno() >= seqNo)
+                    it.remove();
+            }
         }
 
-        if(!messages.isEmpty() && Logging.DEBUG) {
-            Log.d(Logging.TAG, "getEventLogMessages: returning array with " + messages.size()
+        if(!msgs.isEmpty() && Logging.DEBUG) {
+            Log.d(Logging.TAG, "getEventLogMessages: returning array with " + msgs.size()
                                + " entries. for lowerBound: " + lowerBound + " at 0: "
-                               + messages.get(0).getSeqno() + " at " + (messages.size() - 1) + ": "
-                               + messages.getLast().getSeqno());
+                               + msgs.get(0).getSeqno() + " at " + (msgs.size() - 1) + ": "
+                               + msgs.get(msgs.size() - 1).getSeqno());
         }
-        return messages;
+        return msgs;
     }
 
     /**
@@ -527,24 +528,39 @@ public class ClientInterfaceImplementation extends RpcClient {
         if (Logging.DEBUG)
             Log.d(Logging.TAG, "getAttachableProjects for platform: " + boincPlatformName + " or " + boincAltPlatformName);
 
-        // currently attached projects
-        final ImmutableList<Project> attachedProjects = ECLists.immutable.ofAll(getState().getProjects());
+        List<ProjectInfo> allProjectsList = getAllProjectsList(); // all_projects_list.xml
+        List<Project> attachedProjects = getState().getProjects(); // currently attached projects
 
-        // filter out projects that are already attached
-        final ImmutableList<ProjectInfo> filteredProjectsList = getAllProjectsList() // all_projects_list.xml
-                .select(candidate -> attachedProjects
-                        .noneSatisfy(attachedProject ->
-                                             attachedProject.getMasterURL().equals(candidate.getUrl())));
+        List<ProjectInfo> attachableProjects = new ArrayList<>(); // array to be filled and returned
 
-        final Predicate<String> supportedPlatformPredicate = supportedPlatform -> supportedPlatform.contains(boincPlatformName) ||
-                                                                                  (!boincAltPlatformName.isEmpty()
-                                                                                   && supportedPlatform.contains(boincAltPlatformName));
-        final List<ProjectInfo> attachableProjects = filteredProjectsList
-                //filter out projects that do not support Android
-                .select(candidate -> ECLists.immutable.ofAll(candidate.getPlatforms())
-                                                      // project is not yet attached, check whether it supports CPU architecture
-                                                      .anySatisfy(supportedPlatformPredicate))
-                .distinct().toList();
+        if (allProjectsList == null)
+            return Collections.emptyList();
+
+        //filter projects that do not support Android
+        for (ProjectInfo candidate : allProjectsList) {
+            // check whether already attached
+            boolean alreadyAttached = false;
+            for (Project attachedProject : attachedProjects) {
+                if (attachedProject.getMasterURL().equals(candidate.getUrl())) {
+                    alreadyAttached = true;
+                    break;
+                }
+            }
+            if (alreadyAttached)
+                continue;
+
+            // project is not yet attached, check whether it supports CPU architecture
+            for (String supportedPlatform : candidate.getPlatforms()) {
+                if (supportedPlatform.contains(boincPlatformName) ||
+                   (!boincAltPlatformName.isEmpty() && supportedPlatform.contains(boincAltPlatformName))) {
+                    // project is not yet attached and does support platform
+                    // add to list, if not already in it
+                    if (!attachableProjects.contains(candidate))
+                        attachableProjects.add(candidate);
+                    break;
+                }
+            }
+        }
 
         if (Logging.DEBUG)
             Log.d(Logging.TAG, "getAttachableProjects: number of candidates found: "
@@ -567,13 +583,14 @@ public class ClientInterfaceImplementation extends RpcClient {
     }
 
     ProjectInfo getProjectInfo(String url) {
-        // all_projects_list.xml
-        ProjectInfo projectInfo = getAllProjectsList().detect(tmp -> tmp.getUrl().equals(url));
-
-        if (projectInfo == null && Logging.ERROR)
+        List<ProjectInfo> allProjectsList = getAllProjectsList(); // all_projects_list.xml
+        for (ProjectInfo tmp : allProjectsList) {
+            if (tmp.getUrl().equals(url))
+                return tmp;
+        }
+        if (Logging.ERROR)
             Log.e(Logging.TAG, "getProjectInfo: could not find info for: " + url);
-
-        return projectInfo;
+        return null;
     }
 
     boolean setDomainName(String deviceName) {
